--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,25 +11,25 @@ on:
       - "v*"
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: dtolnay/rust-toolchain@stable
+      - run: cargo test
+
   publish:
+    if: github.ref_type == 'tag'
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       id-token: write # Required for OIDC token exchange
     steps:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@stable
-      - name: Test
-        run: |
-          cargo test
-          git checkout .
-      - name: Dry run
-        if: github.ref_type != 'tag'
-        run: cargo publish --dry-run
       - uses: rust-lang/crates-io-auth-action@v1
-        if: github.ref_type == 'tag'
         id: auth
       - name: Publish crate
-        if: github.ref_type == 'tag'
         run: cargo publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
